# fp-agent

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  DISPLAY.md  LICENSE  README.md  SECURITY.md  agent.py  cli.py  config.py  display.py  install.ps1  install.sh  llm_client.py  memory.py  pyproject.toml  requirements.txt  ruff.toml  skills_loader.py  test_interrupt.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
app/: __init__.py
app/acp/: README.md  __init__.py  __main__.py  server.py
app/webui/: main.py  requirements.txt
commands/: __init__.py  back.py  clear.py  compact.py  exit_bang.py  exit_cmd.py  fork.py  help.py  history.py  memory_cmd.py  model.py  reload_skills.py  remove_skill.py  reset.py  resume.py  session.py  skills.py
core/: agent.py  conversation.py  io.py  lifecycle.py  llm_client.py  llm_service.py  prompt_builder.py  session.py  tool_executor.py
display/: README.md  __init__.py  console.py  events.py  interfaces.py  tokens.py  widgets.py
display/components/: __init__.py  box_panel.py  streaming.py
docs/: CHANGELOG.md  CONTRIBUTING.md  PRINCIPLES.md  README.md  开发手册.md  用户手册.md
docs/acp/: README.md
docs/dev/: LLM通信.md  plugins.md  上下文节省.md  中断机制.md  会话模块.md  命令系统.md  工具系统.md  引擎.md  技能系统.md  插件系统.md  数据持久化.md  文件命名约定.md  显示层.md  架构设计.md  自我修改.md  配置系统.md  项目概览.md
docs/guide/: CLI入门.md  FAQ.md  WebUI手册.md  会话管理.md  命令参考.md  工具概览.md  快速开始.md  技能系统.md  插件系统.md  记忆系统.md  配置指南.md
plugins/: README.md  notification.py
plugins/base/: plugin.py
prompts/: __init__.py  agent.md  agent.py
scripts/: bump_docs.py
skills/: __init__.py  loader.py
tools/: PLUGINS.md  README.md  __init__.py  core.py
tools/plugins/: README.md  _plugin_config.py  delete_empty_sessions_plugin.py  file_fingerprint_plugin.py  memory_read_plugin.py  memory_save_plugin.py  python_plugin.py  subagent_plugin.py  task_clear_plugin.py  task_create_plugin.py  task_list_plugin.py  task_update_plugin.py  (+2 more)
(+1 files in other folders)
