[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "five-pebbles-agent"
version = "2.0.0"
description = "基于生命周期钩子的插件化 Agent 框架"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "zpb"},
]
keywords = ["agent", "llm", "lifecycle", "plugin", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "httpx>=0.28.0",
    "prompt-toolkit>=3.0.40",
    "rich>=14.0.0",
    "wcwidth>=0.2.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/zpb/agent"
Repository = "https://github.com/zpb/agent"
Documentation = "https://github.com/zpb/agent/tree/main/docs"

[project.scripts]
fp = "cli:main"

[tool.setuptools.packages.find]
include = ["agent*", "core*", "tools*", "plugins*", "commands*", "skills*", "prompts*"]
exclude = ["tests*", "*.tests*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.json", "*.yaml", "*.yml"]
