[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# 空，根目录不含 Python 包

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["F", "I", "UP", "SIM", "E", "W", "N", "B", "A"]

[tool.ruff.lint.per-file-ignores]
"display.py" = ["N806"]
"kdeconnect_notifier.py" = ["SIM105"]

[tool.ruff.lint.isort]
known-first-party = ["fp_core", "fp_cli", "fp_webui", "fp_acp", "fp"]

[tool.ruff.format]
preview = true
